<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/btnWestern"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/western_railway"
        android:paddingBottom="10dp"
        android:layout_above="@+id/btnCentral"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnCentral"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/central_railway"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/btnHarbour"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/harbour_railway"
        android:layout_below="@+id/btnCentral"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
