<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/etSource"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etDest"
        android:layout_centerHorizontal="true"
        android:hint="@string/select_source"
        android:paddingBottom="10dp"
        android:editable="false" />

    <EditText
        android:id="@+id/etDest"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/select_destination"
        android:editable="false" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDest"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:text="@string/find" />

</RelativeLayout>